fix: images overflowing comment boundaries

--- a/app/styles/layout/_feeds.scss
+++ b/app/styles/layout/_feeds.scss
@@ -412,7 +412,7 @@
 .media-body {
   position: relative;
   top: -3px;
-  max-width: 100%;
+  max-width: calc(100% - 45px);
   .stream-item-activity {
     margin: 0;
     position: relative;
